force-app/main/default/objects/Cabinet_Type__c/Cabinet_Type__c.object-meta.xml
<CustomObject>
    <description>The type of a cabinet that occupies this spot, containing dimensions and details to store and report on the Cabinet object.</description>
    <label>Cabinet Type</label>
    <nameField>
        <label>Cabinet Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cabinet Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>