force-app/main/default/objects/Cabinet_Type__c/fields/Depth_in__c.field-meta.xml
<CustomField>
    <fullName>Depth_in__c</fullName>
    <description>The depth of the cabinet in inches.</description>
    <label>Depth (in)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>