force-app/main/default/objects/Cabinet_Type__c/fields/Enconnex_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Enconnex_Part_Number__c</fullName>
    <description>Enconnex Part Number (InfiniRack)</description>
    <label>Enconnex Part Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>