force-app/main/default/objects/Cabinet_Type__c/fields/Rail_Width_in__c.field-meta.xml
<CustomField>
    <fullName>Rail_Width_in__c</fullName>
    <description>Width of rails that hold equipment within this Cabinet.</description>
    <label>Rail Width (in)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>