force-app/main/default/objects/Cabinet_Type__c/fields/Vertiv_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Vertiv_Part_Number__c</fullName>
    <description>Vertiv Part Number (VR Rack)</description>
    <label>Vertiv Part Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>